# toddles

./: .ghc.environment.x86_64-linux-8.6.3  .gitignore  CHANGELOG.md  LICENSE  Main.hs  README.md  toddles.cabal
Procs/: Add.hs  ListAll.hs  Remove.hs
