cabal-version:       2.4

name:                toddles
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              finnkauski
maintainer:          iwiivi@gmail.com
extra-source-files:  CHANGELOG.md


executable toddles
  main-is:             Main.hs

  other-modules:       Procs.Add,
                       Procs.Remove,
                       Procs.ListAll

  build-depends:       base ^>=4.12.0.0,
                       directory,

  default-language:    Haskell2010

